tests/good/immut_after_mut.mu
let mut x = 0

let mut y = mut ref x

let mut z = ref y
