tests/bad/assign_borrowed.mu
let mut x = 0
let mut y = ref x
x = 1
